--- a/package.json
+++ b/package.json
@@ -16,15 +16,12 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "express-handlebars": "^4.0.6",
     "fs": "^0.0.1-security",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "nodemailer": "^6.7.1",
-    "nodemailer-express-handlebars": "^4.0.0",
-    "path": "^0.12.7",
-    "socket.io": "^4.3.2"
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
