--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
-    "dev": "nodemon server.js",
     "start": "node server.js"
   },
   "keywords": [],
@@ -23,7 +25,4 @@
     "nodemailer": "^6.7.1",
     "path": "^0.12.7"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.15"
-  }
 }
